--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -46,7 +46,8 @@ server.servlet.context-path=/egbank
 spring.main.banner-mode=off
 
 logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
+springdoc.swagger-ui.persist-authorization=true
