--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -26,6 +26,10 @@ spring.security.user.password=123456
 #security.enabled=false
 #security.basic.enabled=false
 #management.security.enabled=false
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
 
 # management.endpoints.web.exposure.include=health,info,mappings,beans,auditevents
 management.endpoints.web.exposure.include=*
@@ -51,3 +55,11 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
 springdoc.swagger-ui.persist-authorization=true
+
+
+##################jwt
+jwt.secret.key=PxCUgq@6D/?>HzY{%]h(j4"5ewt#;E:S
+
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
